--- a/css/style.css
+++ b/css/style.css
@@ -1624,8 +1624,25 @@ form .formRow{
     }
 }
 
-#feed img{
-    max-width: 150px;
+#feed .blogcont{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    border:1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+#feed .blogcont .d-felx img{
+    width: 30%;
+    max-width: 130px;
+}
+#feed .blogcont .d-felx div{
+    width: calc(70% - 16px);
+    margin-left: 16px;
+}
+#feed .blogcont .d-felx div time{
+    font-size: small;
+    color: #ddd;
 }
 
 /* footer */
