--- a/css/style.css
+++ b/css/style.css
@@ -1626,7 +1626,6 @@ form .formRow{
 
 #feed .blogcont{
     width: 100%;
-    height: 100%;
     display: inline-block;
     border:1px solid #ddd;
     border-radius: 4px;
@@ -1635,6 +1634,7 @@ form .formRow{
 #feed .blogcont .d-flex img{
     width: 30%;
     max-width: 130px;
+    border-radius: 4px 0 0 4px;
 }
 #feed .blogcont .d-flex div{
     width: calc(70% - 16px);
@@ -1643,6 +1643,12 @@ form .formRow{
 #feed .blogcont .d-flex div time{
     font-size: small;
     color: #ddd;
+}
+#feed .godetail{
+
+}
+#feed .more{
+    
 }
 
 /* footer */
