--- a/css/style.css
+++ b/css/style.css
@@ -1642,13 +1642,13 @@ form .formRow{
 }
 #feed .blogcont .d-flex div time{
     font-size: small;
-    color: #ddd;
+    color: #aaa;
 }
 #feed .godetail{
 
 }
 #feed .more{
-    
+
 }
 
 /* footer */
