--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html, body{
 h1,h2{
     font-weight: 600;
     letter-spacing: .1rem;
-    font-size:1.4rem;
+    font-size:1.3rem;
     text-align: center;
 }
 span.full_bd{
@@ -73,23 +73,31 @@ a:hover{
 }
 
 .btn{
-    background-color: white;
+    /* background-color: white; */
     padding: 12px 24px;
     text-align: center;
     border: 2px solid #151515;
+    /* border: 2px solid #f075ae; */
+    background-color: #fff0f7;
+    color:#151515;
     min-width: 220px;
     border-radius: 0;
     font-weight: bold;
     font-size: 1.2em;
-    margin-top: 16px;
+    /* margin-top: 16px; */
     position: relative;
     cursor: pointer;
+}
+a.btn:hover,
+div.btn:hover{
+    color: #151515;
 }
 .btn::before{
     content: "";
     width: 16px;
     height: 16px;
-    background:linear-gradient(to top left, #fff 50%, #151515 50%) no-repeat top left/100% 100%;
+    /* background:linear-gradient(to top left, #fff 50%, #151515 50%) no-repeat top left/100% 100%; */
+    background:linear-gradient(to top left, #fff0f7 50%, #f075ae 50%) no-repeat top left/100% 100%;
     position: absolute;
     top:0;
     left: 0;
@@ -377,8 +385,9 @@ a:hover{
     left: 0;
 }
 #top-image .img-wrap img{
-    max-width: 70%;
+    max-width: 80%;
     max-height: 90%;
+    /* width: 80%; */
     margin: 0 auto;
     margin-bottom: 26vw;
     outline: 10px solid rgba(255,255,255,.7);
@@ -423,6 +432,7 @@ a:hover{
     line-height: 1.5rem;
     margin-top: -1rem;
     margin-bottom: 1rem;
+    text-shadow: 0 0 8px white;
 }
 #top-image .wrap3 li{
     margin-top: 8px;
@@ -456,26 +466,58 @@ a:hover{
 }
 #top-image .wrap4{
     z-index: 1;
-    margin-left: 16px;
+    /* margin-left: 16px; */
+    margin-left: calc(10% - 10px - 2.2vw);
+    font-size: 1.5rem;
+    width: auto;
+    max-width: 16.5rem;
+    padding: 16px;
+    /* background: repeating-linear-gradient(45deg, transparent, transparent 16px, #fff0f7 16px, #fff0f7 32px );
+    border-radius: 16px; fbdbd0 */
+    background-color: #fff0f7dd;
+    /* color:#E4007F; */
+    margin-top: 16px;
+    display: inline-block;
+    position: relative;
+}
+#top-image .wrap4::before{
+    position: absolute;
+  content: '';
+  top: 100%;
+  left: 0;
+  border: none;
+  border-bottom: solid 8px transparent;
+  border-right: solid 2.2vw #e2ced8;/*折り返し部分*/
+}
+#top-image .wrap4::after{
+    /* position: absolute;
+  content: '';
+  top: 100%;
+  right: 0;
+  border: none;
+  border-bottom: solid 8px transparent;
+  border-left: solid 2.2vw #e2ced8; */
 }
 #top-image .wrap4 span{
-    color: white;
+    /* color: white;
     text-shadow: 0 0 10px rgb(228 0 127 / 30%);
-    font-size: 4rem;
+    font-size: 4rem; */
+    border-bottom: 3px solid #E4007F;
 }
 #top-image .wrap4 p span:nth-child(1){
-    font-size: 1.7rem;
-    line-height: 4.5rem;
+    /* font-size: 1.7rem;
+    line-height: 4.5rem; */
 }
 #top-image .wrap4 small{
-    line-height: 1rem;
+    /* line-height: 1rem;
     margin-top: .7rem;
-    display: inline-block;
+    display: inline-block; */
 }
 #top-image .wrap5{
     position: absolute;
     top: 30vw;
-    right: 2.5rem;
+    /* right: 2.5rem; */
+    right: 16px;
     font-family: serif;
     letter-spacing: .8px;
     z-index: 1;
@@ -494,7 +536,7 @@ a:hover{
     justify-content: center;
     font-size: small;
     padding: 0 8px;
-    max-width: 650px;
+    max-width: 720px;
     margin: 0 auto;
 }
 #top-image .wrap6 ul li{
@@ -548,6 +590,12 @@ a:hover{
     #top-image .wrap4{
         margin-left: 10vw;
     }
+    #top-image .wrap4{
+        /* width: 28.4rem; */
+        /* margin: 0 auto; */
+        margin-top: 24px;
+        margin-left: 21vw;
+    }
     #top-image .wrap5{
         right: 15vw;
         top: 15vw;
@@ -570,6 +618,11 @@ a:hover{
     #top-image .wrap4{
         margin-left: 20%;
         margin-top: 16px;
+    }
+    #top-image .wrap4{
+        /* width: 47%;
+        margin: 0 auto; */
+        margin-top: 24px;
     }
     #top-image .wrap5{
         right: 20%;
@@ -1574,7 +1627,7 @@ form .formRow{
     margin-bottom: 24px;
 }
 #apply a{
-    color: #151515;
+    /* color: #f075ae; */
 }
 #apply .another-apply .btn span{
     display: block;
