--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,7 @@ div.btn:hover{
 }
 #top-image .sub{
     font-size: 12px;
+    display: block;
 }
 #top-image .relative,
 #top-image.relative{
@@ -430,9 +431,11 @@ div.btn:hover{
     text-align: left;
     font-size: 1.5rem;
     line-height: 1.5rem;
-    margin-top: -1rem;
+    margin-top: .5rem;
     margin-bottom: 1rem;
     text-shadow: 0 0 8px white;
+    border-bottom: 2px solid #E4007F;
+    display: inline-block;
 }
 #top-image .wrap3 li{
     margin-top: 8px;
@@ -516,8 +519,7 @@ div.btn:hover{
 #top-image .wrap5{
     position: absolute;
     top: 30vw;
-    /* right: 2.5rem; */
-    right: 16px;
+    right: 2.5rem;
     font-family: serif;
     letter-spacing: .8px;
     z-index: 1;
@@ -614,15 +616,13 @@ div.btn:hover{
     #top-image .wrap2{
         right: calc(50% - 22%);
     }
-    #top-image .wrap3,
-    #top-image .wrap4{
+    #top-image .wrap3{
         margin-left: 20%;
         margin-top: 16px;
     }
     #top-image .wrap4{
-        /* width: 47%;
-        margin: 0 auto; */
         margin-top: 24px;
+        margin-left: calc(50% - 204px - 3vw);
     }
     #top-image .wrap5{
         right: 20%;
